# rag_v1

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py
app/: __init__.py  config.py  logging_setup.py
app/api/: auth.py
app/auth/: __init__.py  cleanup.py  common_passwords.txt  deps.py  exceptions.py  middleware.py  password_validator.py  schemas.py  service.py  tokens.py
app/configs/: __init__.py  app.py  auth.py  base.py  db.py  langfuse.py  llm.py  logging.py  minio.py  opensearch.py  postgres.py  tei.py
app/db/: __init__.py  base.py  models.py  repositories.py  session.py
app/llm/: __init__.py  factory.py  teienv.py
docs/: 2026-06-12-rag-m1-stage-closure.md  2026-06-12-rag-v1-stage-closure.md
docs/reviews/: 2026-06-11-rag-m0-infra-r2-review.html  2026-06-11-rag-m1-schema-review.html  2026-06-11-rag-m11-eval-ragas-r2-review.html  2026-06-11-rag-m11-eval-ragas-review.html  2026-06-11-rag-m12-hardening-review.html  2026-06-11-rag-m3-llm-embed-review.html  2026-06-11-rag-m4-ingest-file-r2-review.html  2026-06-11-rag-m5-ingest-url-r2-review.html  2026-06-11-rag-m6-ingest-confluence-review.html  2026-06-11-rag-m7-graph-r2-review.html  2026-06-11-rag-m8-api-chat-review.html  2026-06-11-rag-m9-ui-gradio-r2-review.html  2026-06-11-rag-m9-ui-gradio-review.html
infra/: check_health.sh  docker-compose.yml  init.sql
tests/unit/: test_config.py  test_m1_schema.py  test_m2_auth.py  test_m3_llm_embed.py  test_p0_14_init_sql.py  test_p0_16_langfuse_db.py
(+78 files in other folders)
