# RAG V1 pyproject.toml (M0 r1 P0-8 修订：仅基础设施 4 个 runtime + dev 依赖)
# M0 infra 范围最小集：不预装 fastapi/uvicorn/sqlalchemy（留给 M1/M2/M3/M8 落地时加）

[project]
name = "rag-v1"
version = "0.1.0"
description = "RAG V1 - 10k-1M chunk production-ready retrieval-augmented generation system"
requires-python = ">=3.11"

dependencies = [
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "python-dotenv>=1.0",
    "structlog>=24.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "ruff>=0.5",
    "mypy>=1.10",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
